--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
 <link rel="stylesheet" href="/css/page.css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
 <div id=app></div>
-<script src="/bundle.js"></script>
 <script src="https://code.jquery.com/jquery-3.0.0.min.js"   integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="   crossorigin="anonymous"></script>
 
+<script src="/bundle.js"></script>
 <script src="/js/app.js"></script>
+<script src="/js/blossom.js"></script>
