Getting started page
Added getting started page & other fixes

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html>
 <meta charset=utf-8/>
 <title>Blossom</title>
-<link rel="stylesheet" href="/css/blossom.css" />
-<link rel="stylesheet" href="/css/highlight.css" />
-<link rel="stylesheet" href="/css/page.css" />
+<link rel="stylesheet" type="text/css" href="/css/blossom.css" />
+<link rel="stylesheet" type="text/css" href="/css/highlight.css" />
+<link rel="stylesheet" type="text/css" href="/css/page.css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
 <div id=app></div>
 <script src="https://code.jquery.com/jquery-3.0.0.min.js"   integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="   crossorigin="anonymous"></script>
