--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,20 @@
 <!doctype html public "storage">
 <html>
-<meta charset=utf-8/>
-<title>Blossom</title>
-<link rel="stylesheet" type="text/css" href="/css/blossom.css" />
-<link rel="stylesheet" type="text/css" href="/css/highlight.css" />
-<link rel="stylesheet" type="text/css" href="/css/page.css" />
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
-<div id=app></div>
-<script src="https://code.jquery.com/jquery-3.0.0.min.js"   integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="   crossorigin="anonymous"></script>
+	<head>
+		<meta charset=utf-8/>
+		<title>Blossom</title>
+		<link rel="stylesheet" type="text/css" href="/css/blossom.css" />
+		<link rel="stylesheet" type="text/css" href="/css/highlight.css" />
+		<link rel="stylesheet" type="text/css" href="/css/page.css" />
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
+		<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet"/>
+	</head>
+	<body>
+		<div id=app></div>
 
-<script src="/bundle.js"></script>
-<script src="/js/app.js"></script>
-<script src="/js/blossom.js"></script>
+		<script src="https://code.jquery.com/jquery-3.0.0.min.js"   integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="   crossorigin="anonymous"></script>
+		<script src="/bundle.js"></script>
+		<script src="/js/app.js"></script>
+		<script src="/js/blossom.js"></script>
+	</body>
+</html>
