--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset=utf-8/>
 		<title>Blossom</title>
 		<link rel="shortcut icon" type="image/png" href="/examples/favicon.png"/>
-		<link rel="stylesheet" type="text/css" href="/css/blossom.min.css" />
+		<link rel="stylesheet" type="text/css" href="/blossom/css/blossom.min.css" />
 		<link rel="stylesheet" type="text/css" href="/css/highlight.css" />
 		<link rel="stylesheet" type="text/css" href="/css/page.css" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
@@ -16,6 +16,6 @@
 		<script src="https://code.jquery.com/jquery-3.0.0.min.js"   integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="   crossorigin="anonymous"></script>
 		<script src="/bundle.js"></script>
 		<script src="/js/app.js"></script>
-		<script src="/js/blossom.min.js"></script>
+		<script src="/blossom/js/blossom.min.js"></script>
 	</body>
 </html>
