--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset=utf-8/>
 		<title>Blossom</title>
+		<meta name="description" content="A free open-source design framework for the modern web">
+		<meta name="keywords" content="open source, stylus, design framework, framework">
+		<meta name="author" content="Stefan Mansson">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" type="image/png" href="/examples/favicon.png"/>
 		<link rel="stylesheet" type="text/css" href="/blossom/css/blossom.min.css" />
 		<link rel="stylesheet" type="text/css" href="/css/highlight.css" />
