--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,9 @@
 		<meta name="author" content="Stefan Mansson">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" type="image/png" href="/examples/favicon.png"/>
-		<link rel="stylesheet" type="text/css" href="/blossom/css/blossom.min.css" />
 		<link rel="stylesheet" type="text/css" href="/css/highlight.css" />
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
-		<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet"/>
+		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+		<link href="//fonts.googleapis.com/css?family=Roboto+Mono:400,500,700" rel="stylesheet"/>
 	</head>
 	<body>
 		<div id=app></div>
@@ -19,6 +18,6 @@
 		<script src="https://code.jquery.com/jquery-3.0.0.min.js"   integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="   crossorigin="anonymous"></script>
 		<script src="/bundle.js"></script>
 		<script src="/js/app.js"></script>
-		<script src="/blossom/js/blossom.min.js"></script>
+		<script src="/blossom/js/blossom.js"></script>
 	</body>
 </html>
