--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset=utf-8/>
-		<title>Blossom</title>
+		<title>Blossom Styleguide</title>
 		<meta name="description" content="A free open-source design framework for the modern web">
 		<meta name="keywords" content="open source, stylus, design framework, framework">
 		<meta name="author" content="Stefan Mansson">
@@ -10,14 +10,13 @@
 		<link rel="shortcut icon" type="image/png" href="/examples/favicon.png"/>
 		<link rel="stylesheet" type="text/css" href="/css/highlight.css" />
 		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-		<link href="//fonts.googleapis.com/css?family=Roboto+Mono:400,500,700" rel="stylesheet"/>
 	</head>
 	<body>
 		<div id=app></div>
 
-		<script src="https://code.jquery.com/jquery-3.0.0.min.js"   integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="   crossorigin="anonymous"></script>
+		<script src="//code.jquery.com/jquery-3.0.0.min.js"   integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="   crossorigin="anonymous"></script>
 		<script src="/bundle.js"></script>
 		<script src="/js/app.js"></script>
-		<script src="/blossom/js/blossom.js"></script>
+		<script src="/js/blossom.min.js"></script>
 	</body>
 </html>
