--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Stefan Mansson">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
   </head>
   <body>
     <div id=app></div>
