--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
     <meta name="author" content="Stefan Mansson">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
-    <link rel="stylesheet" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+    <link rel="stylesheet" href="/css/ionicons.min.css" />
   </head>
   <body>
     <div id=app></div>
-    <script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="/js/jquery-3.2.1.min.js"></script>
     <script src="/bundle.js"></script>
   </body>
 </html>
