Added changelog for 1.5
Changelog description for v1.5

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html public "storage">
 <html>
   <head>
-    <meta charset=utf-8/>
+    <meta charset="utf-8">
     <title>Blossom Styleguide</title>
     <meta name="description" content="A free open-source design framework for the modern web">
     <meta name="keywords" content="open source, stylus, design framework, framework">
